# trial-cdk-layers

./: .gitignore  cdk.json  package-lock.json  package.json  pyproject.toml
.github/workflows/: deploy.yml
aaa/python/: requirements.txt
lib/: trial_cdk_layers-stack.ts
src/python/: code.py
test/: trial_cdk_layers.test.ts
