[tool.poetry]
name = "trial-cdk-layers"
version = "0.1.0"
description = ""
authors = ["sinofseven <em.s.00001@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
boto3 = "^1.34.76"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
